RESOLVED FIXED35419
[Qt] WebGL: does not update canvas when WTF_ACCELERATED_COMPOSITING is enabled
https://bugs.webkit.org/show_bug.cgi?id=35419
Summary [Qt] WebGL: does not update canvas when WTF_ACCELERATED_COMPOSITING is enabled
Jarkko Sakkinen
Reported 2010-02-25 22:00:49 PST
HTMLCanvasElement::buffer() and HTMLCanvasElement::willDraw() are called only once for the canvas element.
Attachments
Adds runtime check for accelerated composition in WebGLRenderingContext::markContextChanged() (1.29 KB, patch)
2010-02-26 00:29 PST, Jarkko Sakkinen
no flags
Same fix, added missing bug URL. (1.34 KB, patch)
2010-02-26 01:06 PST, Jarkko Sakkinen
no flags
Jarkko Sakkinen
Comment 1 2010-02-26 00:29:38 PST
Created attachment 49571 [details] Adds runtime check for accelerated composition in WebGLRenderingContext::markContextChanged()
Jarkko Sakkinen
Comment 2 2010-02-26 01:06:49 PST
Created attachment 49573 [details] Same fix, added missing bug URL.
WebKit Commit Bot
Comment 3 2010-02-26 13:33:17 PST
Comment on attachment 49573 [details] Same fix, added missing bug URL. Clearing flags on attachment: 49573 Committed r55306: <http://trac.webkit.org/changeset/55306>
WebKit Commit Bot
Comment 4 2010-02-26 13:33:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.