2010-02-26  Jarkko Sakkinen  <jarkko.sakkinen@tieto.com>

Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=35419
        3D canvas did not update when WTF_USE_ACCELERATED_COMPOSITING
        was enabled but not from run-time settings. Added run-time
        check that compositing is enabled.

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::markContextChanged):

Canonical link: https://commits.webkit.org/46607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55306 268f45cc-cd09-0410-ab3c-d52691b4dbfc